--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -46,3 +46,33 @@ html {
   color: white;
   text-align: left;
 }
+
+.container {
+  display: grid;
+  grid-template: 1fr 1fr 5fr 1fr / 1fr 3fr;
+  gap: 15px;
+}
+
+.header {
+  grid-column: 1 / -1;
+}
+
+.footer {
+  grid-column: 1 / -1;
+  grid-row: -1 / -2;
+}
+
+.sidebar {
+  grid-column: 1;
+  grid-row: 2 / -2;
+}
+
+.nav {
+  grid-column: 2 / -1;
+  grid-row: 2;
+}
+
+.article {
+  grid-column: 2 / -1;
+  grid-row: 3 / 4;
+}
