--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -89,3 +89,70 @@
   font-size: 13px;
   font-weight: normal;
 }
+
+.container {
+  display: grid;
+  grid-template: 95px 48px 1fr 45px / minmax(280px, 1fr) 4fr;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
+  min-height: 100vh;
+}
+
+.header {
+  grid-column: 1 / -1;
+  /* align-self: center; */
+  /* align-items: center; */ 
+  display: grid;
+  /* grid-template-columns: minmax(250px, 1fr) 3fr; */
+  grid-template-columns: 1fr 2fr;
+  /* gap: 200px; */
+ }
+
+ .logo {
+  justify-self: start;
+ }
+
+ .menu {
+  /* margin-right: 50px; */
+  align-self: center;
+ }
+
+ul {
+  list-style-type: none;
+}
+
+ .header ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  /* justify-items: end; */
+ }
+
+ .sidebar {
+  grid-row: 2 / 4;
+  display: grid;
+  /* grid-template-columns: 1fr; */
+  gap: 50px;
+ }
+
+.sidebar > div {
+  display: grid;
+  align-items: center;
+}
+
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+
+}
+
+.article {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-auto-rows: 200px;
+  gap: 15px;
+}
+
+ .footer {
+  grid-column: 1 / -1;
+ }
+
